--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {},
   "devDependencies": {
     "serverless-pseudo-parameters": "^2.4.0",
-    "serverless-step-functions": "^1.13.0"
+    "serverless-step-functions": "^1.13.0",
+    "serverless-step-functions-offline": "^2.1.2"
   }
 }
