Step function run locally using step-functions-offline

--- a/serverless.yml
+++ b/serverless.yml
@@ -12,14 +12,15 @@ provider:
         - "*"
 custom:
   stepFunctionsOffline:
-    stepOne: startEC2
-    stepTwo: writeS3
+    StartEC2: startEC2
+    WriteS3: writeS3
         
 functions:
   startEC2:
-    handler: ec2.handler.startEC2
+    handler: ec2.startEC2
+    name: StartEC2
   writeS3:
-    handler: s3.handler.writeS3
+    handler: ec2.writeS3
 
 stepFunctions:
   stateMachines:
