Integrated transformer. Runs asynchronously, so not quiet right.

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ custom:
         
 functions:
   startEC2:
-    handler: ec2.startEC2
+    handler: ../brahma/lib/transformers/sd.handler
     name: StartEC2
   writeS3:
     handler: ec2.writeS3
@@ -35,7 +35,7 @@ stepFunctions:
         States:
           StartEC2:
             Type: Task
-            Resource: "arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:${self:service}-${opt:stage}-startEC2"
+            Resource: "arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:${self:service}-${opt:stage}-startEC2.sync"
             Next: WriteS3
           WriteS3:
             Type: Task
